[package]
name = "rocket-sled-tutorial"
version = "0.1.0"
authors = ["Marcus Buffett <marcusbuffett@me.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
sled = "0.34.4"
sled-extensions = { version = "0.2.0", features = ["bincode"]}
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.21"
